<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexible_behavior_trees</name>
  <version>0.0.1</version>
  <description>
    Flexible Behavior Trees provides a server interface and FlexBE states to load
    a variety of behavior trees and execute them using the FlexBE UI.
  </description>
  <author email="joshua.zutell.18@cnu.edu">Joshua Zutell</author>
  <maintainer email="david.conner@cnu.edu">Dr. David Conner</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/flexible_navigation</url>
  <url type="repository">https://github.com/FlexBE/flexible_behavior_trees</url>
  <url type="bugtracker">https://github.com/FlexBE/flexible_behavior_trees/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>flex_bt_msgs</exec_depend>
  <exec_depend>flex_bt_server</exec_depend>
  <exec_depend>flex_bt_flexbe_states</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
